[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Environment/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Environment/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://Environment/Pitch.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 300.436 )

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 300 )

[node name="Top_Wall" parent="." instance=ExtResource( 4 )]
collision_mask = 3

[node name="Bottom_Wall" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 580 )
collision_mask = 2147483651

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 11, 300 )
collision_mask = 3

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( 1013, 300 )
collision_mask = 6

[node name="Pitch" parent="." instance=ExtResource( 7 )]

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="PlayerOneGoal" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOneGoal"]
position = Vector2( -20, 300 )
shape = SubResource( 1 )

[node name="PlayerTwoGoal" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTwoGoal"]
position = Vector2( 1044, 300 )
shape = SubResource( 1 )

[node name="InitialPosition" type="Position2D" parent="."]
position = Vector2( 512, 300 )
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="body_entered" from="PlayerOneGoal" to="." method="_on_PlayerOneGoal_body_entered"]
[connection signal="body_entered" from="PlayerTwoGoal" to="." method="_on_PlayerTwoGoal_body_entered"]
